Fixed Disqus comment spacing and Author bio css
- Disqus comments now properly have spacing before they are displayed.
Fixes #1
- Added an accent bar in addition to the spacing
- Floated author bio left to align with the author picture and adjusted
width to work in responsive views. Fixes #3

--- a/css/responsive.css
+++ b/css/responsive.css
@@ -220,7 +220,7 @@
 	}
 
 	#author-bio {
-		width: 100%;
+		max-width: 220px;
 	}
 		
 	/*comments*/
