--- a/style.css
+++ b/style.css
@@ -956,12 +956,22 @@ html[xmlns] .slides {
 }
 
 #author-bio {
-	float: right;
+	float: left;
+	margin-left: 20px;
+	padding-top: 12px;
 	width: 510px;
 }
 
 #author-bio p:last-child {
 	margin: 0;
+}
+
+#author-comments-footer {
+	background: url("images/heading-bg.png") center repeat-x;
+	margin-top: 20px;
+	margin-bottom: 20px;
+	width: 100%;
+	height: 6px;
 }
 
 
